# tarka

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .trivyignore  .trufflehogignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-DEPENDENCIES.md  Makefile  README.md  RELEASE_SCHEDULE.md  SECURITY.md  STUB_REGISTER.md  SUPPORT.md  VISION.md  benchmark-latency-evaluate-local.txt  docker-compose.local.yml  docker-compose.streams-ai.yml  docker-compose.yml  extract_v2.sh  flake.nix  package-lock.json  package.json  pyproject.toml  release.sh  tarka.py
crates/tarka-audit-cli/: Cargo.toml
crates/tarka-audit-cli/src/: ch.rs  main.rs  trace_audit.rs
crates/tarka-cli/: Cargo.toml
crates/tarka-cli/src/: clickhouse.rs  diff.rs  error.rs  lib.rs  main.rs  mock_external.rs  registry.rs  replay.rs  signals.rs  wasm_loader.rs
crates/tarka-core/: Cargo.toml  build.rs
crates/tarka-core/benches/: rule_set_latency_guard.rs  standard_heavy_rule_set.rs
crates/tarka-core/data/: signal_registry.example.json
crates/tarka-core/examples/: gen_pytest_golden_manifest.rs
crates/tarka-core/proto/: evidence.proto  rule_set.proto
crates/tarka-core/src/: lib.rs  loki_tee.rs  metrics_export.rs  observability.rs  tracing_elk.rs
crates/tarka-internal-comms/: Cargo.toml  build.rs
crates/tarka-internal-comms/src/: lib.rs
crates/tarka-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/tarka-py/python/: internal_comms_pb2.py  internal_comms_pb2.pyi  internal_comms_pb2_grpc.py
crates/tarka-py/src/: ingest.rs  lib.rs
crates/tarka-py/tests/: test_evaluate_ffi_errors.py  test_integrity_parity.py  test_manifest_verifier.py  test_merkle_wire.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: evaluator.rs  evidence_manifest_decode.rs
services/agent/: pyproject.toml  shadow_copilot.py
services/agent/tests/: test_shadow_copilot.py
services/analytics/: pyproject.toml
services/analytics-sink/: Cargo.toml  Dockerfile  pyproject.toml
services/analytics-sink/src/: main.rs
services/analytics-sink/tests/: test_analytics.py  test_query_safety.py  test_scorecard.py
services/analytics/tests/: test_ml_export.py
services/batch-ingest/: Cargo.toml
services/batch-ingest/src/: main.rs
services/case-api/: Dockerfile  pyproject.toml
services/case-api/alembic/: env.py
services/case-api/static/: index.html
services/case-api/tests/: conftest.py  test_case_decision_explanation.py  test_case_views.py  test_db_runtime_state.py  test_dispute_deadline.py  test_health_runtime.py  test_investigation_templates.py  test_migration_status_endpoint.py  test_ops_kpi_series.py  test_playbook_on_create.py  test_productivity.py  test_queue.py  test_sar_investigative_notes_lock.py  test_sar_state_machine.py  test_sar_transport_monitor_api.py  test_slo_http.py  test_workflow.py
services/case-api/workflows/: auto_escalate_deny.json  route_bot_cases.json  webhook_on_review.json
services/chitragupta/: .env.example  pyproject.toml
services/chitragupta/tests/: conftest.py  test_api_runs.py  test_capability_matrix_plugins.py  test_contract_compat.py
services/collaboration-chat-bridge/: Dockerfile  README.md  pyproject.toml
services/collaboration-chat-bridge/tests/: test_bridge.py  test_persona_bridge.py  test_workflow_bridge.py
services/core-api/: Dockerfile  pyproject.toml
services/core-api/config/: case_alembic.ini
services/counter-service/: Dockerfile  pyproject.toml
services/counter-service/tests/: test_main.py
services/decision-api/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
services/decision-api/alembic/: env.py
services/decision-api/rules/: default.json  experiment_registry.jsonl  graph_routing_policy_v1.json  horizontal_burst_5m.json  pack_4c540d323115.json  shadow_payment_probe_v1.json  typology_definitions_v1.json  typology_predicate_registry_v1.json  velocity_rules.json  vertical_payment_risk_v1.json
services/decision-api/static/: dashboard.html
services/decision-api/tests/: __init__.py  aggregate_fake_redis.py  conftest.py  test_adverse_action.py  test_aggregates.py  test_api_endpoints.py  test_async_osint_publish_residency.py  test_attestation_taxonomy.py  test_audit_explainability_trace.py  test_backtest_streaming.py  test_calibration_stretch.py  test_canary_governance.py  test_challenge_policy.py  test_circuit_breaker.py  test_compile_rego_golden.py  test_consortium.py  test_counter_manifest.py  test_dashboard_olap_summary.py  test_day60_velocity_windows.py  test_db_resilience.py  test_decision_log.py  test_device_scoring.py  test_entity_link_store.py  test_entity_signature_sync.py  test_eval_steps.py  test_evaluate_aggregate_gate.py  test_event_time.py  test_external_signals.py  test_feature_store_ddl_execute.py  test_first_class_services_inference.py  test_golden_counters.py  test_golden_inference.py  test_graph_decision_explanation.py  test_graph_intel.py  test_graph_routing_policy.py  test_inference_build.py  test_integrity_policy.py  test_internal_counters_api.py  test_json_rules.py  test_location_context.py  (+24 more)
services/event-ingest/: .gitignore.new  Cargo.lock.bak  Cargo.toml  Dockerfile  pyproject.toml
services/event-ingest/proptest-regressions/: main.txt
services/event-ingest/src/: main.rs
services/event-ingest/tests/: conftest.py  test_ingest.py  test_ingest_contract.py  test_ingest_dlq.py  test_ingest_stats.py
services/graph-service/: Dockerfile  cache_warmer.py  pyproject.toml  snapshot_tool.py  test_cache_warmer_gate.py  test_snapshot_tool_topology_gate.py
services/graph-service/docs/: DECISION_STREAM_INDEXER.md  janusgraph-adapter.md
services/graph-service/rules/: checkpoint_profiles_v1.json
services/integration-ingress/: Dockerfile  pyproject.toml  pytest.ini
services/investigation-agent/: .env.example  .env.reference.example  Dockerfile  pyproject.toml  pytest.ini
services/management/: pyproject.toml
services/ml-scoring/: Dockerfile  pyproject.toml
services/rule-engine/: Cargo.toml  pyproject.toml
services/rule-engine/src/: error.rs  (+2 more)
services/signal-api/: pyproject.toml
(+2301 files in other folders)
