[workspace]
resolver = "2"
members = [
    "crates/tarka-core",
    "crates/tarka-internal-comms",
    "crates/tarka-py",
    "crates/tarka-cli",
    "crates/tarka-audit-cli",
    "packages/tarka-rule-engine",
]
exclude = [
    "fuzz",
    "legacy_attic/services/rule-engine",
    "legacy_attic/services/event-ingest",
    "legacy_attic/services/analytics-sink",
    "legacy_attic/services/batch-ingest",
]
