[project]
name = "tarka"
version = "1.0.2"
description = "Open-source modular fraud detection platform — prove every signal."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["fraud", "detection", "osint", "ml", "graph", "rules-engine", "aml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial",
]

# Core: just the CLI installer + shared utilities
dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
# Individual modules — install only what you need
core = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "redis[hiredis]>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "tarka-core @ file:./services/core",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.13.0",
]
graph = [
    "neo4j>=5.25.0",
]
ml = [
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
    "scikit-learn>=1.5.0",
]
cases = [
    "fastapi>=0.135.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "tarka-core @ file:./services/core",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.21.0",
]
streaming = [
    "nats-py>=2.9.0",
]
analytics = [
    "clickhouse-connect>=0.7.0",
    "nats-py>=2.9.0",
]
agent = [
    "openai>=1.50.0",
]
osint = [
    "httpx>=0.28.0",
]
gateway = [
    "strawberry-graphql[fastapi]>=0.243.0",
]
sdk = [
    "httpx>=0.28.0",
]

observability = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

# Laptop / Docker micro stack (see deploy/docker-compose.micro.yml and scripts/start-micro.sh).
micro = [
    "duckdb>=1.1.0",
    "aiosqlite>=0.21.0",
]

# Bundles — common combinations
lite = [
    "tarka[core,cases]",
]
standard = [
    "tarka[core,graph,ml,cases,osint]",
]
full = [
    "tarka[core,graph,ml,cases,streaming,analytics,agent,osint,gateway]",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "*.egg-info",
    "dist",
    "build",
    # Cookiecutter/Jinja placeholders are not valid Python until rendered.
    "templates",
]
extend-exclude = [
    "templates/cookiecutter-investigation-integration-adapter",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top (for shared imports)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
