[package]
name = "tarka-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1"
libfuzzer-sys = "0.4"
prost = "0.13"
serde_json = "1"
tarka-core = { path = "../crates/tarka-core" }

[[bin]]
name = "evaluator"
path = "fuzz_targets/evaluator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evidence_manifest_decode"
path = "fuzz_targets/evidence_manifest_decode.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

[workspace]
members = ["."]
