[package]
name = "tarka-audit-cli"
version = "0.1.0"
edition = "2021"
description = "Operator CLI: verify sealed wire EvidenceManifest bytes against an Ed25519 key (Python ManifestVerifier parity), or audit ClickHouse manifests via OTel trace id."

[[bin]]
name = "tarka-audit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tarka-cli = { path = "../tarka-cli" }
tarka-core = { path = "../tarka-core" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
