[package]
name = "tarka-internal-comms"
version = "0.1.0"
edition = "2021"
description = "Internal gRPC (SignalService) stubs for Tarka microservices — tonic / prost."
license = "Apache-2.0"
publish = false

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
protobuf-src = "2"
tonic-prost-build = "0.14"
