[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "tarka"
version = "0.1.0"
description = "PyO3 bindings for Tarka evidence manifests and rule evaluation"
requires-python = ">=3.10"
dependencies = [
    "protobuf>=5.26",
    "opentelemetry-api>=1.27.0,<2",
    "PyNaCl>=1.5,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.maturin]
module-name = "tarka._tarka"
python-source = "python"
