[package]
name = "analytics-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
axum = "0.7"
clickhouse = "0.11"
rustls-webpki = "0.103.12"
futures = "0.3"
sha2 = "0.10"

[dev-dependencies]
proptest = "1.4"
