[project]
name = "tarka-analytics"
version = "0.1.0"
description = "Tarka OLAP analytics engines (ClickHouse / DuckDB) with dialect-safe query builders"
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.8.0",
  "duckdb>=1.1.0",
  "sqlglot>=26.0.0",
]

[project.optional-dependencies]
ml_export = [
  "pyarrow>=14.0.0",
]
dev = [
  "pytest>=8.0",
  "pyarrow>=14.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
