[package]
name = "batch-ingest"
version = "0.1.0"
edition = "2021"
description = "High-throughput historical backfill to ClickHouse (no live NATS decision publish)"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
clickhouse = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.8", features = ["v4"] }
