[project]
name = "tarka-case-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.0",
  "uvicorn[standard]>=0.44.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "asyncpg>=0.31.0",
  "psycopg[binary]>=3.3.3",
  "alembic>=1.18.4",
  "httpx>=0.28.1",
  "pydantic-settings>=2.14.0",
  "pydantic>=2.13.3",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0", "httpx>=0.28.1"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
case_api = ["static/**/*"]
