[project]
name = "tarka-core-api"
version = "1.0.0"
description = "Consolidated decision + case APIs"
requires-python = ">=3.11"
dependencies = [
  "structlog>=24.1.0",
  "fastapi>=0.135.3",
  "uvicorn[standard]>=0.44.0",
  "nats-py>=2.7.0",
  "tarka-core @ file:../core",
  "tarka-analytics @ file:../analytics",
  "redis[hiredis]>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "aiosqlite>=0.21.0",
  "asyncpg>=0.31.0",
  "psycopg[binary]>=3.3.3",
  "alembic>=1.18.4",
  "httpx>=0.28.1",
  "tenacity>=9.0.0",
  "pydantic-settings>=2.13.1",
  "pydantic>=2.13.0",
  "opentelemetry-sdk>=1.27.0,<2",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27.0,<2",
  "clickhouse-connect>=0.8.0",
  "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
