[project]
name = "tarka-decision-api"
version = "0.2.0"
description = "Tarka — synchronous decision API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "redis[hiredis]>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.6.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
