[project]
name = "tarka-graph-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "neo4j>=5.26.0",
  "gremlinpython>=3.7.0",
  "networkx>=3.2",
  "pydantic-settings>=2.6.0",
  "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# JanusGraph/Gremlin backends are optional; default CI only exercises Neo4j algorithm paths.
# Omitting them keeps --cov-fail-under meaningful without requiring a live Janus in unit tests.
[tool.coverage.run]
omit = [
  "*/graph_service/algorithms_janus.py",
  "*/graph_service/janusgraph_store.py",
  "*/graph_service/janusgraph_gremlin.py",
]
