[project]
name = "tarka-graph-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3",
  "uvicorn[standard]>=0.44.0",
  "neo4j>=6.1.0",
  "gremlinpython>=3.8.1",
  "networkx>=3.6.1",
  "pydantic-settings>=2.13.1",
  "pydantic>=2.13.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# JanusGraph/Gremlin backends are optional; default CI only exercises Neo4j algorithm paths.
# Omitting them keeps --cov-fail-under meaningful without requiring a live Janus in unit tests.
[tool.coverage.run]
omit = [
  "*/graph_service/algorithms_janus.py",
  "*/graph_service/janusgraph_store.py",
  "*/graph_service/janusgraph_gremlin.py",
]
