[project]
name = "tarka-graph-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.46.0",
  "neo4j>=6.2.0",
  "gremlinpython>=3.8.1",
  "networkx>=3.6.1",
  "pydantic-settings>=2.14.0",
  "pydantic>=2.13.3",
  # auth_rbac (imported for require_role) imports httpx at module load; Docker uses non-dev install.
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# JanusGraph/Gremlin backends are optional; default CI only exercises Neo4j algorithm paths.
# Omitting them keeps --cov-fail-under meaningful without requiring a live Janus in unit tests.
[tool.coverage.run]
omit = [
  "*/graph_service/algorithms_janus.py",
  "*/graph_service/janusgraph_store.py",
  "*/graph_service/janusgraph_gremlin.py",
]
