[project]
name = "tarka-integration-ingress"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.46.0",
  "httpx>=0.28.1",
  "boto3>=1.42.97",
  "google-cloud-kms>=3.12.0",
  "azure-identity>=1.25.3",
  "azure-keyvault-keys>=4.11.0",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
