[project]
name = "tarka-integration-ingress"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "tarka-core @ file:../core",
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.46.0",
  "httpx>=0.28.1",
  "nats-py>=2.14.0",
  "redis[hiredis]>=7.4.0",
  "boto3>=1.43.6",
  "google-cloud-kms>=3.13.0",
  "azure-identity>=1.25.3",
  "azure-keyvault-keys>=4.11.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "sqlalchemy[asyncio]>=2.0.49",
  "aiosqlite>=0.22.1",
  "asyncpg>=0.31.0",
  "alembic>=1.18.4",
  "psycopg[binary]>=3.3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
