[project]
name = "tarka-investigation-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3",
  "python-multipart>=0.0.26",
  "uvicorn[standard]>=0.44.0",
  "httpx>=0.28.1",
  "openpyxl>=3.1.5",
  "pydantic>=2.13.0",
  "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
