[project]
name = "tarka-investigation-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.1",
  "fpdf2>=2.8.7",
  "python-multipart>=0.0.27",
  "uvicorn[standard]>=0.46.0",
  "httpx>=0.28.1",
  "openpyxl>=3.1.5",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
investigation_agent = ["workflows/manifests/*.json", "resources/*.json"]
