[project]
name = "tarka-ml-scoring"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.20.0"]
mlflow = ["mlflow>=2.18.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
