[project]
name = "tarka-ml-scoring"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.28.0"]
onnx = ["onnxruntime>=1.20.0"]
mlflow = ["mlflow>=2.18.0"]
shap = [
  "lightgbm>=4.0.0",
  "shap>=0.45.0",
  "joblib>=1.4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
