[package]
name = "tarka_rule_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "tarka_rule_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }

[profile.release]
lto = true
